5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1593_2425.log
== TEST (2019-03-26 10:21:47) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb

print(round(cons_medio, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:22:23) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb

print(round(cons_medio, 3)+"Km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(cons_medio, 3)+"Km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:22:57) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb

print(round(cons_medio, 3)"Km/l")
-- ERROR:
File "XXXX", line 6
    print(round(cons_medio, 3)"Km/l")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:23:10) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb

print(round(cons_medio, 3)+"Km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(cons_medio, 3)+"Km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:23:57) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb
D =- round(cons_medio, 3)+"Km/l")
print(D + "Km/l")
-- ERROR:
File "XXXX", line 5
    D =- round(cons_medio, 3)+"Km/l")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:24:04) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb
D =- round(cons_medio, 3)
print(D + "Km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(D + "Km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:24:22) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb
D =- round(cons_medio, 3)
print(D,"Km/l")
-- OUTPUT:
-14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:25:01) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb 
D = round(cons_medio, 3)
print(D,"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:25:15) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb 
D = round(cons_medio, 3)
print(D,"Km/l")
-- EXECUTION TIME:
0.159643
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:25:25) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb 
D = round(cons_medio, 3)
print(D,"Km/L")
-- EXECUTION TIME:
0.144832
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/L
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/L
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/L
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:25:31) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb 
D = round(cons_medio, 3)
print(D,"Km/L")
-- OUTPUT:
14.286 Km/L
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:25:45) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb 
D = round(cons_medio, 3)
print(D,"km/L")
-- OUTPUT:
14.286 km/L
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:25:59) 
-- CODE:
dist = float(input("Insira a distancia: "))
comb = float(input("Insira a consumo de combustivel: "))

cons_medio = dist/comb 
D = round(cons_medio, 3)
print(D,"km/l")
-- EXECUTION TIME:
0.150263
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
